--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,16 @@ project(CMakeSFMLProject LANGUAGES CXX)
 
 include(FetchContent)
 FetchContent_Declare(SFML
-    GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 2.6.x)
+        GIT_REPOSITORY https://github.com/SFML/SFML.git
+        GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
 
 # B2D - Box2D physics library
 add_subdirectory("lib/b2d/Box2D")
-#include_directories("lib/b2d/Box2D/")
+include_directories("lib/b2d/Box2D/")
 set(B2D_INCS "lib/b2d/Box2D/")
 link_directories("${CMAKE_BINARY_DIR}/lib/sfml/lib")
-
-
 
 #### Add Engine and our own library projects####
 
@@ -23,7 +21,7 @@ file(GLOB_RECURSE RESOURCE_FILES "res/*.*")
 file(GLOB_RECURSE SOURCE_FILES engine/*.cpp engine/*.h)
 add_library(lib_engine STATIC ${SOURCE_FILES} ${RESOURCE_FILES})
 target_include_directories(lib_engine INTERFACE "${CMAKE_SOURCE_DIR}/engine/" PUBLIC SYSTEM ${B2D_INCS} )
-target_link_libraries(lib_engine lib_tile_level_loader lib_maths lib_ecm Box2D sfml-graphics sfml-audio)
+target_link_libraries(lib_engine lib_tile_level_loader lib_maths lib_ecm Box2D sfml-graphics sfml-audio lib_maths)
 
 ## Tile loader lib
 file(GLOB_RECURSE SOURCE_FILES lib_tile_level_loader/*.cpp lib_tile_level_loader/*.h)
@@ -35,6 +33,7 @@ target_link_libraries(lib_tile_level_loader lib_maths sfml-graphics)
 add_library(lib_maths INTERFACE)
 target_sources(lib_maths INTERFACE "${CMAKE_SOURCE_DIR}/lib_maths/maths.h")
 target_include_directories(lib_maths INTERFACE "${CMAKE_SOURCE_DIR}/lib_maths" SYSTEM INTERFACE ${SFML_INCS})
+target_link_libraries(lib_maths INTERFACE sfml-system)
 
 ## ECM lib
 file(GLOB_RECURSE SOURCE_FILES lib_ecm/*.cpp lib_ecm/*.h)
@@ -44,12 +43,37 @@ target_link_libraries(lib_ecm PRIVATE lib_maths)
 
 
 
-add_executable(CMakeSFMLProject src/main.cpp  src/platformer.cpp)
-target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics)
+add_executable(CMakeSFMLProject
+        src/platformer_main.cpp
+        src/scenes/scene_level1.cpp
+        src/scenes/scene_level1.h
+        src/scenes/scene_level2.cpp
+        src/scenes/scene_level2.h
+        src/scenes/scene_level3.cpp
+        src/scenes/scene_level3.h
+        src/scenes/scene_menu.cpp
+        src/scenes/scene_menu.h
+        src/components/cmp_actor_movement.cpp
+        src/components/cmp_bullet.cpp
+        src/components/cmp_enemy_ai.cpp
+        src/components/cmp_enemy_turret.cpp
+        src/components/cmp_hut_player.cpp
+        src/components/cmp_physics.cpp
+        src/components/cmp_player_physics.cpp
+        src/components/cmp_sprite.cpp
+        src/components/cmp_text.cpp
+)
+
+add_custom_command(TARGET CMakeSFMLProject POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${RESOURCE_FILES} $<TARGET_FILE_DIR:CMakeSFMLProject> COMMAND_EXPAND_LISTS)
+
+file(COPY "${CMAKE_SOURCE_DIR}/res" DESTINATION "${CMAKE_BINARY_DIR}/")
+
+target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics lib_engine sfml-system)
 target_compile_features(CMakeSFMLProject PRIVATE cxx_std_17)
 if (WIN32 AND BUILD_SHARED_LIBS)
     add_custom_command(TARGET CMakeSFMLProject POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:CMakeSFMLProject> $<TARGET_FILE_DIR:CMakeSFMLProject> COMMAND_EXPAND_LISTS)
+            COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:CMakeSFMLProject> $<TARGET_FILE_DIR:CMakeSFMLProject> COMMAND_EXPAND_LISTS)
 endif()
 
 install(TARGETS CMakeSFMLProject)
